# Frontier_OS

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  Frontier_OS.code-workspace  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  research_question.yml
.github/workflows/: ci.yml  cla.yml  lint.yml  sol-exciton-consumers-daily.yml  sol-exciton-drift-daily.yml  sol-exciton-governance-weekly.yml  sol-exciton-promotion-weekly.yml  sol-exciton-snowball-daily.yml  sol-exciton-snowball-pulse.yml
Exciton-MoA/: PHASE_HANDOFF.md  README.md  blank_config.py  blank_manifold_core.py  broad_phonon_validation.txt  entangled_manifolds.py  entangler.py  excitons.py  focused_phonon_validation.txt  hippocampal.py  hippocampal_replay.py  latent_mediator.py  main.py  master_equations.md  master_glossary.md  paper_finder_artifact.py  paper_handoff.py  paper_synthesizer.py  requirements.txt  shared_mediator.py  telemetry.py  telemetry_panel.py  transducer.py
Exciton-MoA/blank_manifold/pre_check_tests/: AGENT_README.md  chaos_stream_simulator.py  pre_check.md  test_agent_roundtrip.py  test_agentic_umbrella_phase1.py  test_agentic_umbrella_phase2.py  test_agentic_umbrella_phase3.py  test_agentic_umbrella_phase4.py  test_arm_promotion.py  test_entangled_manifolds.py  test_entangler.py  test_exciton_physics.py  test_hippocampal_burst.py  test_hippocampal_pair_transducer.py  test_hippocampal_replay.py  test_latent_mediator.py  test_orchestrator_telemetry.py  test_paper_finder_artifact.py  test_paper_handoff.py  test_paper_synthesizer.py  test_repro_baseline_check.py  test_semantic_potential.py  test_shared_mediator.py  test_snowball_decision_report.py  test_snowball_experiment.py  test_statistical_prism.py  (+2 more)
Exciton-MoA/firmWare/: main.py
Exciton-MoA/hardWare/: blank_config.py  blank_manifold_core.py
Exciton-MoA/scripts/: agent_handoff_schemas.py  arm_promotion.py  baseline_registry.py  counterfactual_probe.py  drift_watch.py  lesson_advisory_writer.py  lesson_compiler.py  pair_tournament.py  promotion_audit.py  replay_to_paper.py  repro_baseline_check.py  snowball_consumer.py  snowball_decision_report.py  snowball_experiment.py
Exciton-MoA/teleMetry/: entanglerGiant.py  hippocampalPairTransducer.py  hippocampalReplay.py  hippocampalTransducer.py  latentMediator.py  sharedMediator.py  telemetry.py  telemetryPanel.py
Exciton-MoA/transDucer/: statisticalPrism.py
Exciton-MoA/working_data/: README.md
Exciton-MoA/working_mind/: README.md  approved_paper_intake_handoff_msf_1998.md  basin-fragility-proxy-note.md  frontier-learning-ledger.md  papers-index.md  repo-memory-promotions.md  smoke_20260311_b-paper-candidates.md  stabilization-paper-translation-note.md  sweep-to-paper-runbook.md  synchrony-margin-proxy-note.md
legal/: CLA.md
references/: README.md  initialConcept.md
scripts/: add_copyright_headers.py
(+11 files in other folders)
